objects/Astonous_SM__Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Astonous_SM__Delivery_Date__c</fullName>
        <inlineHelpText>Actual Delivery Date</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__DropOf_Type__c</fullName>
        <label>DropOf Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Daily Pickup</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Customer Counter</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>One Time Pickup</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Letter Center</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Air Service Center</label>
                </value>
                <value>
                    <fullName>REGULAR_PICKUP</fullName>
                </value>
                <value>
                    <fullName>DROP_BOX</fullName>
                </value>
                <value>
                    <fullName>REQUEST_COURIER</fullName>
                </value>
                <value>
                    <fullName>STATION</fullName>
                </value>
                <value>
                    <fullName>BUSINESS_SERVICE_CENTER</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Format_Type__c</fullName>
        <label>Format Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>COMMON2D</fullName>
                </value>
                <value>
                    <fullName>LABEL_DATA_ONLY</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Goods_Description__c</fullName>
        <inlineHelpText>Good Description</inlineHelpText>
        <label>Goods Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Label_Type__c</fullName>
        <label>Label Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>GIF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Linear_Unit__c</fullName>
        <label>Linear Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <label>Inch</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>Centimeter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Master_Tracking_Number__c</fullName>
        <label>Master Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Package_Bill_Type__c</fullName>
        <label>Package Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>03</fullName>
                    <label>Non-Document</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Document Only</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>WWEF Pallet</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Domestic Pallet</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Printing_Orientation__c</fullName>
        <label>Printing Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TOP_EDGE_OF_TEXT_FIRST</fullName>
                </value>
                <value>
                    <fullName>BOTTOM_EDGE_OF_TEXT_FIRST</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Raw_Data__c</fullName>
        <description>Hidden field for Technical Implementation Purpose. It keeps a raw request for some carrier (Toll) to pass between request and get cleaned after an operation is completed.</description>
        <inlineHelpText>Hidden field for Technical Implementation Purpose</inlineHelpText>
        <label>Raw Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Company__c</fullName>
        <label>Recipient Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Postal_Code__c</fullName>
        <label>Recipient Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_State__c</fullName>
        <label>Recipient State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Recipient_Street__c</fullName>
        <label>Recipient Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Related_To__c</fullName>
        <description>Store ID of related to record</description>
        <inlineHelpText>Salesforce Record ID of related object that was picked as Sender. This must be configured in Recipient Address DataSource custom metadata to automatically link shipment with parent Object.</inlineHelpText>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Return_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if Shipment was generated as Return Shipment</inlineHelpText>
        <label>Return Shipment ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_City__c</fullName>
        <label>Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Company__c</fullName>
        <label>Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Country__c</fullName>
        <label>Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Phone__c</fullName>
        <label>Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Postal_Code__c</fullName>
        <label>Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_State__c</fullName>
        <label>Sender State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sender_Street__c</fullName>
        <label>Sender Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Service_Type__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment_Currency__c</fullName>
        <label>Shipment Currency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment_Manifest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Manifest</label>
        <referenceTo>Astonous_SM__Shipment_Manifest__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment_Packaging_Type__c</fullName>
        <label>Shipment Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <label>Get All Rates</label>
                </value>
                <value>
                    <fullName>YOUR_PACKAGING</fullName>
                </value>
                <value>
                    <fullName>FEDEX_BOX</fullName>
                </value>
                <value>
                    <fullName>FEDEX_ENVELOPE</fullName>
                </value>
                <value>
                    <fullName>FEDEX_PAK</fullName>
                </value>
                <value>
                    <fullName>FEDEX_TUBE</fullName>
                </value>
                <value>
                    <fullName>FEDEX_10KG_BOX</fullName>
                </value>
                <value>
                    <fullName>FEDEX_25KG_BOX</fullName>
                </value>
                <value>
                    <fullName>FEDEX_EXTRA_LARGE_BOX</fullName>
                </value>
                <value>
                    <fullName>FEDEX_LARGE_BOX</fullName>
                </value>
                <value>
                    <fullName>FEDEX_MEDIUM_BOX</fullName>
                </value>
                <value>
                    <fullName>FEDEX_SMALL_BOX</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Customer Supplied Package</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Express Box</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>25KG Box</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>10KG Box</label>
                </value>
                <value>
                    <fullName>2a</fullName>
                    <label>UPS Express Box - Small</label>
                </value>
                <value>
                    <fullName>2b</fullName>
                    <label>UPS Express Box - Medium</label>
                </value>
                <value>
                    <fullName>2c</fullName>
                    <label>UPS Express Box - Large</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>UPS Letter</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>UPS Tube</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>Flats</label>
                </value>
                <value>
                    <fullName>57</fullName>
                    <label>Parcels</label>
                </value>
                <value>
                    <fullName>58</fullName>
                    <label>BPM</label>
                </value>
                <value>
                    <fullName>59</fullName>
                    <label>First Class</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <label>Priority</label>
                </value>
                <value>
                    <fullName>61</fullName>
                    <label>Machineables</label>
                </value>
                <value>
                    <fullName>62</fullName>
                    <label>Irregulars</label>
                </value>
                <value>
                    <fullName>63</fullName>
                    <label>Parcel Post</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment_Service_Type__c</fullName>
        <label>Shipment Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <label>Get All Rates</label>
                </value>
                <value>
                    <fullName>FEDEX_GROUND</fullName>
                </value>
                <value>
                    <fullName>GROUND_HOME_DELIVERY</fullName>
                </value>
                <value>
                    <fullName>FEDEX_EXPRESS_SAVER</fullName>
                </value>
                <value>
                    <fullName>PRIORITY_OVERNIGHT</fullName>
                </value>
                <value>
                    <fullName>FIRST_OVERNIGHT</fullName>
                </value>
                <value>
                    <fullName>STANDARD_OVERNIGHT</fullName>
                </value>
                <value>
                    <fullName>FEDEX_2_DAY</fullName>
                </value>
                <value>
                    <fullName>FEDEX_2_DAY_AM</fullName>
                </value>
                <value>
                    <fullName>FEDEX_FIRST_FREIGHT</fullName>
                </value>
                <value>
                    <fullName>FEDEX_1_DAY_FREIGHT</fullName>
                </value>
                <value>
                    <fullName>FEDEX_2_DAY_FREIGHT</fullName>
                </value>
                <value>
                    <fullName>FEDEX_3_DAY_FREIGHT</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>Next Day Air</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>2nd Day Air</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Ground</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Worldwide Express</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Worldwide Expedited</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>3 Day Select</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Next Day Air Saver</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>UPS Next Day Air Early</label>
                </value>
                <value>
                    <fullName>54</fullName>
                    <label>Worldwide Express Plus</label>
                </value>
                <value>
                    <fullName>59</fullName>
                    <label>2nd Day Air A.M.</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <label>Saver</label>
                </value>
                <value>
                    <fullName>71</fullName>
                    <label>UPS Worldwide Express Freight Midday</label>
                </value>
                <value>
                    <fullName>96</fullName>
                    <label>UPS Worldwide Express Freight</label>
                </value>
                <value>
                    <fullName>T-N/A-003</fullName>
                    <label>Auswide 3kg Satchel</label>
                </value>
                <value>
                    <fullName>U-N/A-003</fullName>
                    <label>Auswide 5kg Satchel</label>
                </value>
                <value>
                    <fullName>X-N/A-004</fullName>
                    <label>Road Express</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Shipment In Case, it is return shipment</description>
        <label>Shipment</label>
        <referenceTo>Astonous_SM__Shipment__c</referenceTo>
        <relationshipLabel>Return Shipments</relationshipLabel>
        <relationshipName>Return_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipping_Career__c</fullName>
        <label>Shipping Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>PriorityAustralia</fullName>
                </value>
                <value>
                    <fullName>IPEC</fullName>
                </value>
                <value>
                    <fullName>Easyship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Signature_Option__c</fullName>
        <label>Signature Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SERVICE_DEFAULT</fullName>
                </value>
                <value>
                    <fullName>ADULT</fullName>
                </value>
                <value>
                    <fullName>DIRECT</fullName>
                </value>
                <value>
                    <fullName>INDIRECT</fullName>
                </value>
                <value>
                    <fullName>NO_SIGNATURE_REQUIRED</fullName>
                </value>
                <value>
                    <fullName>No Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Status_Information__c</fullName>
        <inlineHelpText>Status returned from shipping carrier</inlineHelpText>
        <label>Status Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Astonous_SM__Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Stock_Type__c</fullName>
        <label>Stock Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PAPER_4X6</fullName>
                </value>
                <value>
                    <fullName>PAPER_4X6.75</fullName>
                </value>
                <value>
                    <fullName>PAPER_4X8</fullName>
                </value>
                <value>
                    <fullName>PAPER_4X9</fullName>
                </value>
                <value>
                    <fullName>PAPER_7X4.75</fullName>
                </value>
                <value>
                    <fullName>PAPER_8.5X11_BOTTOM_HALF_LABEL</fullName>
                </value>
                <value>
                    <fullName>PAPER_8.5X11_TOP_HALF_LABEL</fullName>
                </value>
                <value>
                    <fullName>PAPER_LETTER</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6.75</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6.75_LEADING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6.75_TRAILING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X8</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X9</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X9_LEADING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X9_TRAILING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>4x6</fullName>
                </value>
                <value>
                    <fullName>4X6LABEL</fullName>
                </value>
                <value>
                    <fullName>4X6LABELL</fullName>
                </value>
                <value>
                    <fullName>6X4LABEL</fullName>
                </value>
                <value>
                    <fullName>4X6LABELP</fullName>
                </value>
                <value>
                    <fullName>4X6LABELP PAGE</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Total_Charge__c</fullName>
        <label>Total Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Total_Packages__c</fullName>
        <inlineHelpText>Count of Total Packages with this shipment</inlineHelpText>
        <label>Total Packages</label>
        <summarizedField>Astonous_SM__Shipment_Package__c.Astonous_SM__Quantity__c</summarizedField>
        <summaryForeignKey>Astonous_SM__Shipment_Package__c.Astonous_SM__Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Total_Surcharge__c</fullName>
        <label>Total Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Tracking_Id_Type__c</fullName>
        <description>TrackingIdType that is required if you cancel shipment</description>
        <label>Tracking Id Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Career__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>LBS</fullName>
                    <label>Pounds</label>
                </value>
                <value>
                    <fullName>KGS</fullName>
                    <label>Kilograms</label>
                </value>
                <value>
                    <fullName>OZS</fullName>
                    <label>Ounces</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>Astonous_SM__All_New_Shipment</fullName>
        <columns>NAME</columns>
        <columns>Astonous_SM__Master_Tracking_Number__c</columns>
        <columns>Astonous_SM__Ship_Date__c</columns>
        <columns>Astonous_SM__Status__c</columns>
        <columns>Astonous_SM__Expected_Delivery_Date__c</columns>
        <columns>Astonous_SM__Shipping_Career__c</columns>
        <columns>Astonous_SM__Delivery_Date__c</columns>
        <columns>Astonous_SM__Total_Packages__c</columns>
        <columns>Astonous_SM__Total_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Astonous_SM__Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Shipment</label>
    </listViews>
    <listViews>
        <fullName>Astonous_SM__All_Shipments</fullName>
        <columns>NAME</columns>
        <columns>Astonous_SM__Ship_Date__c</columns>
        <columns>Astonous_SM__Shipping_Career__c</columns>
        <columns>Astonous_SM__Status__c</columns>
        <columns>Astonous_SM__Master_Tracking_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Shipments</label>
    </listViews>
    <listViews>
        <fullName>Astonous_SM__Delivered_Shipments</fullName>
        <columns>NAME</columns>
        <columns>Astonous_SM__Ship_Date__c</columns>
        <columns>Astonous_SM__Master_Tracking_Number__c</columns>
        <columns>Astonous_SM__Expected_Delivery_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Astonous_SM__Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>Delivered Shipments</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Shipment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>